<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoActivity"
    android:orientation="vertical">

    <include android:id="@+id/actionBarMascota"
        layout="@layout/actionbar_mascota">
    </include>

    <TextView
        android:id="@+id/txtContacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tContacto"
        android:textSize="@dimen/sizeAcerca"
        android:textStyle="bold|italic"
        android:layout_below="@id/actionBarMascota"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/llDatosContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/sNombreHint"
                android:textSize="@dimen/fuente_texto"
                android:layout_marginTop="@dimen/margin_top"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/sCorreoHint"
                android:textSize="@dimen/fuente_texto"
                android:layout_marginTop="@dimen/margin_top">
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/txtMensaje"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_descripcion"
                android:inputType="textMultiLine"
                android:hint="@string/sMensajeHint"
                android:textSize="@dimen/fuente_texto"
                android:layout_marginTop="@dimen/margin_top">
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_below="@id/llDatosContacto"
            android:gravity="bottom">

            <Button
                android:id="@+id/btnEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sBoton"
                android:layout_marginTop="@dimen/margin_top"
                android:theme="@style/estiloBoton"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
